--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -14,7 +14,7 @@
     <div id="msg" hidden="hidden">
         <h3>@Model.Message</h3>
     </div>
-    <h2>Ali Haider DevOps Demo</h2>
+    <h2>Ali Haider DevOps Demo CI/CD</h2>
     <table class="table">
         <thead>
             <tr>
